--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,10 +8,13 @@
             <a href="/board/1" class="btn btn-secondary">상세보기</a>
         </div>
     </div>
+    <img src="cat.jpg" alt="?" width="200" height="200">
     <ul class="d-flex justify-content-center pagination">
         <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
         <li class="page-item"><a class="page-link" href="#">Next</a></li>
     </ul>
 </div>
+
+
 
 {{> /layout/footer}}
