로그인 완료

--- a/src/main/resources/templates/error/exLogErr.mustache
+++ b/src/main/resources/templates/error/exLogErr.mustache
@@ -7,7 +7,6 @@
     <title>Document</title>
     <style>
         .err {
-
             font-size: 50px;
         }
     </style>
@@ -15,8 +14,8 @@
 
 <body class="err">
 
-    <h3>동일한 유저네임으로 회원가입할 수 없습니다.</h3>
-    <a href="/joinForm">회원가입 페이지 돌아가기</a>
+    <h3>유저네임 혹은 패스워드가 일치하지 않습니다.</h3>
+    <a href="/loginForm">로그인 페이지 돌아가기</a>
 </body>
 
 </html>
