--- a/src/main/resources/templates/board/saveForm.mustache
+++ b/src/main/resources/templates/board/saveForm.mustache
@@ -8,7 +8,7 @@
             <!-- title=제목1 & content=내용1 -->
             <form action="/board/save" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="title" name="title">
+                    <input type="text" class="form-control" placeholder="title" name="title" maxlength="100">
                 </div>
                 <div class="mb-3">
                     <textarea class="form-control" rows="5" name="content"></textarea>
