--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -3,16 +3,17 @@
 
 
 <div class="container p-5">
-
+    {{#boardList}}
     <div class="card mb-3">
         <div class="card-body">
-            <h4 class="card-title mb-3">제목1</h4>
-            <a href="/board/1" class="btn btn-secondary">상세보기</a>
+            <h4 class="card-title mb-3">{{title}}</h4>
+            <a href="/board/{{id}}" class="btn btn-secondary">상세보기</a>
         </div>
     </div>
+    {{/boardList}}
     <ul class="d-flex justify-content-center pagination">
-        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        <li class="page-item {{#first}}disabled{{/first}}"><a class="page-link" href="?page={{prevPage}}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="?page={{nextPage}}">Next</a></li>
     </ul>
 </div>
 
