--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -3,32 +3,41 @@
 <div class="container p-5">
 
     <!-- 버튼 3개 우측정렬 -->
+    {{#pageOwner}}
     <div class="d-flex justify-content-end m-1">
-
         <button type="button" class="btn btn-outline-info m-1"><a href="/">돌아가기</a></button>
         <button type="button" class="btn btn-outline-warning m-1">수정</a></button>
         <button type="button" class="btn btn-outline-danger m-1">삭제</button>
     </div>
+    {{/pageOwner}}
+    {{^pageOwner}}
+    <div class="d-flex justify-content-end m-1">
+        <button type="button" class="btn btn-outline-info m-1"><a href="/">돌아가기</a></button>
+    </div>
+    {{/pageOwner}}
 
     <!-- 메인 -->
     <div class="card">
+            {{#board}}
         <div class="card-body">
             <!-- 글쓴이 정보 -->
             <div class="d-flex justify-content-between">
                 <div class="d-flex justify-content-start">
-                    <div class="mx-1">글번호: 0</div>
+                    <div class="mx-1">{{id}}</div>
                 </div>
                 <div class="d-flex justify-content-end">
-                    <div class="mx-1">작성자: ssar</div>
+                    <div class="mx-1">{{userName}}</div>
+
                 </div>
             </div>
             <hr>
             <!-- 제목 -->
-            <h3>제목입니다.</h3>
+            <h3>{{title}}</h3>
             <hr>
             <!-- 내용 -->
-            <h5>내용입니다.</h5>
+            <h5>{{content}}</h5>
         </div>
+            {{/board}}
 
         <!-- 댓글 -->
         <div class="card">
