--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -7,7 +7,10 @@
     <div class="d-flex justify-content-end m-1">
         <button type="button" class="btn btn-outline-info m-1"><a href="/">돌아가기</a></button>
         <button type="button" class="btn btn-outline-warning m-1">수정</a></button>
-        <button type="button" class="btn btn-outline-danger m-1">삭제</button>
+        <form action="/board/{{board.id}}/delete" method="post" >
+        <button type="submit" class="btn btn-outline-danger m-1">삭제</button>
+        </form>
+        {{! button의 타입은 기본값이 폼태그 안에 있으면 submit이고 폼 태그 밖에 있으면 button이다.  }}
     </div>
     {{/pageOwner}}
     {{^pageOwner}}
