--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -8,10 +8,10 @@
             <!-- username=사용자 입력값 & password=사용자 입력값-->
             <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20" value="ssar">
                 </div>
                 <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Enter password" name="password" required maxlength="20">
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" required maxlength="20" value="1234">
                 </div>
                 <!--form태그 안의 모든 input을 한번에 전송, submit은 반드시 form태그 안에 있어야 함-->
                 <button type="submit" class="btn btn-primary form-control">로그인</button>
