--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -6,11 +6,12 @@
         <div class="card-body">
             <!-- 요청을 하면 localhost:8080/join POST로 요청됨-->
             <!-- username=사용자 입력값 & password=사용자 입력값 & email=사용자 입력값-->
-            <form action="/join" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="/join" method="post" enctype="application/x-www-form-urlencoded" onsubmit="return valid()">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" placeholder="Enter username" name="username"
-                        required maxlength="20">
+                        required maxlength="20" onchange="usernameChange()">
+                    <button type="button" class="m-2" onclick="check()">중복체크</button>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
@@ -23,7 +24,7 @@
                         maxlength="20">
                 </div>
                 <!--form태그 안의 모든 input을 한번에 전송, submit은 반드시 form태그 안에 있어야 함-->
-                <button type="submit" class="btn btn-primary form-control">회원가입</button>
+                <button type="submit" id="btnJoin" class="btn btn-primary form-control">회원가입</button>
             </form>
         </div>
     </div>
@@ -31,4 +32,50 @@
 
 </div>
 
+<script>
+    let usernameSameCheck = false;
+
+    function usernameChange() {
+        console.log("변경됨");
+        usernameSameCheck = false;
+    }
+
+    function valid() {
+        if (usernameSameCheck) {
+            return true;
+        }
+        alert("중복체크를 해주세요");
+        return false;
+
+    }
+
+    // 책임 - input태그로부터 username을 가져와서 통신을 요청하고, 중복이 되었는지 확인
+    async function check() {
+        // 1. DOM으로부터 값 가져오기
+        let username = document.querySelector("#username").value;
+        // console.log("유저네임", username);
+
+        // 2. 통신하기
+        let response = await fetch(`/check?username=${username}`);
+
+        // 3. 파싱하기
+        let responseBody = await response.text(); // 바디를 파싱(컨트롤러에서 응답이 어떤거지 확인해서 text/json사용)
+        console.log(responseBody);
+
+        // 4. 상태코드 확인
+        let btnJoin = document.querySelector("#btnJoin");
+        if (response.status == 200) {
+            alert(responseBody);
+            usernameSameCheck = true;
+            // btnJoin.classList.remove("disabled");
+        } else {
+            alert(responseBody);
+            usernameSameCheck = false;
+            // btnJoin.classList.add("disabled");
+        }
+
+        // 5. 비지니스 로직
+
+    }
+</script>
 {{> /layout/footer}}
