--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -45,10 +45,11 @@
         <!-- 댓글 -->
         <div class="card">
             <div class="card-header"><b>댓글</b></div>
-            <form action="/reply/save">
+            <form action="/reply/save" method="post">
+                <input type="hidden" name="boardId" value="{{board.id}}">
                 <div class="d-flex">
                     <textarea class="form-control mx-3 mt-3 flex-grow-2" placeholder="댓글을 입력해주세요" rows="1"
-                        name="text"></textarea>
+                        name="comment"></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-primary m-3">등록</button>
@@ -57,7 +58,7 @@
             <div class="card-footer bg-white"><b>댓글 리스트</b>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <div>cos-1등</div>
+                        <div></div>
                         <button type="submit" class="btn ">🗑</button>
                     </li>
                     <li class="list-group-item d-flex justify-content-between">
