--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -11,7 +11,7 @@
                     <input type="text" class="form-control" name="username" disabled value={{user.username}}>
                 </div>
                 <div class="mb-3">
-                    <input type="password" class="form-control" name="password" value={{user.password}}>
+                    <input type="password" class="form-control" name="password" required>
                 </div>
                 <div class="mb-3">
                     <input type="email" class="form-control" id="email" name="email" disabled value={{user.email}}>
